Handle backend API errors and show valid error message in UI #63

--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.scss
@@ -10,6 +10,16 @@
   color: #FFCA26;
 }
 
+
+.alert-color{
+  color: #FF0000;
+}
+
+
+.darkblue{
+  color: #0000aa;
+}
+
 .vertical {
   display: flex;
   flex-direction: column;
@@ -61,7 +71,7 @@
 }
 
 .imgHolder {
-  display: inline-block;
+  display: block;
   float: right;
 }
 
