adding BLE support

--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.html
@@ -41,7 +41,8 @@
               <div class="container text-area" fxLayout="column" fxFlexWrap fxLayoutAlign="space-evenly center" >
                 <Label class="title" textWrap="true">Step 3:</Label>
                 <Label class="description" textWrap="true">You are all set!</Label>
-                <button mat-flat-button color="primary" (click)="onSensorConnect()">READ NOW</button>
+                <button mat-flat-button color="primary" (click)="onSensorConnect()">USB</button>
+                <button mat-flat-button color="primary" (click)="connectBluetooth()">Bluetooth</button>
               </div>
               <img src="../../../assets/crops-images/ms3.png" alt="Step 3:">
             </div>
