Adding ui for select a date stage - Issue #88
Signed-off-by: Jimmy Huang <jimmy.hua@ibm.com>

--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -48,3 +48,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .swiper-pagination-bullet-active {
   background: #000 !important;
 }
+
+.mat-toolbar {
+  background-color: #2F4FFE;
+  color: white;
+}
