add seeding date in crop class and using it instead of selectcrop class

--- a/liquid-prep-app/src/app/components/advice/advice.component.html
+++ b/liquid-prep-app/src/app/components/advice/advice.component.html
@@ -10,38 +10,67 @@
     </button>
 </mat-toolbar>
 <div id="img-container">
-  <img class="topImage" src="/assets/crops-images/advice.png" width="359" height="311">
+  <img class="topImage" [src]="adviceImg" width="345" height="267">
     <button id="measure-btn" mat-fab color="primary" class="rotate-45" (click)="onFabClicked()">
       <mat-icon>straighten</mat-icon>
     </button>
 </div>
 
-<div class="horizontal">
-    <div class="vertical">
-      <span class="vertical-align-middle title">{{waterRecommeded}}cm</span>
-      <Label class="description" textWrap="true">{{ "WATER RECOMMENDED" }}</Label>
+<div style="margin-top: 64px">
+  <div fxLayout="column"
+       fxFill
+       fxLayoutGap="30px"
+       fxLayoutAlign="start center">
+
+    <div fxLayout="row"
+         fxFill
+         fxLayoutGap="4px"
+         fxLayoutAlign="space-evenly end">
+      <div class="vertical">
+        <span class="vertical-align-middle txt-font">{{wateringDecision}}</span>
+        <Label class="description" textWrap="true">{{ "WATERING ADVICE" }}</Label>
+      </div>
+      <div class="vertical">
+        <div class="imgHolder">
+          <mat-icon class="vertical-align-middle yellow">wb_sunny</mat-icon>
+          <span class="vertical-align-middle temp">{{temperature}}&deg;C</span>
+        </div>
+        <Label class="description" textWrap="true">{{"TEMPERATURE"}}</Label>
+      </div>
+      <div class="vertical">
+        <div class="imgHolder">
+          <span class="vertical-align-middle color-medium txt-font">{{soilMoistureLevel}}</span>
+        </div>
+        <Label class="description" textWrap="true">{{"SOIL MOISTURE"}}</Label>
+      </div>
     </div>
-    <div class="vertical">
-      <span class="vertical-align-middle title">{{ wateringDecision }}</span>
-      <Label class="description" textWrap="true">{{"WATER ADVISE"}}</Label>
+
+
+    <div fxLayout="row"
+         fxFill
+         fxLayoutGap="4px"
+         fxLayoutAlign="space-evenly end">
+      <div class="vertical">
+        <div class="imgHolder">
+          <span class="vertical-align-middle txt-font">{{plantingDays}}d</span>
+        </div>
+        <Label class="description" textWrap="true">{{ "SINCE PLANTING" }}</Label>
+      </div>
+      <div class="vertical">
+        <div class="imgHolder">
+          <span class="vertical-align-middle txt-font">{{stageNumber}}</span>
+        </div>
+        <Label class="description" textWrap="true">{{ "GROWTH STAGE" }}</Label>
+      </div>
+      <div class="vertical">
+        <div class="imgHolder">
+          <span class="vertical-align-middle txt-font">TUE</span>
+        </div>
+        <Label class="description" textWrap="true">{{ "CHECK AGAIN" }}</Label>
+      </div>
     </div>
+  </div>
 </div>
 
-<div class="horizontal">
-    <div class="vertical">
-      <div class="imgHolder">
-        <mat-icon class="vertical-align-middle yellow">wb_sunny</mat-icon>
-        <span class="vertical-align-middle temp">{{temperature}}&deg;C</span>
-      </div>
-      <Label class="description" textWrap="true">{{ "TEMPERATURE" }}</Label>
-    </div>
-    <div class="vertical">
-      <div class="imgHolder">
-        <span class="vertical-align-middle redText title">{{soilMoistureLevel}}%</span>
-      </div>
-      <Label class="description" textWrap="true">{{ "SOIL MOISTURE" }}</Label>
-    </div>
-
-</div>
 
 
