--- a/liquid-prep-app/src/app/components/advice/advice.component.scss
+++ b/liquid-prep-app/src/app/components/advice/advice.component.scss
@@ -19,8 +19,8 @@
     height: 50%;
     width: 100%;
     align-items: center;
-
-    background-color: #2F4FFE;
+    padding-top: 50px;
+    background-color: #edf5ff;
 }
 
 .date {
@@ -90,4 +90,20 @@
   -ms-transform: rotate(-45deg);
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
+}
+
+.txt-font {
+  font-size: x-large;
+}
+
+.color-low{
+  color: #db1d22;
+}
+
+.color-medium{
+  color: #e3963a;
+}
+
+.color-high{
+  color: #3f6a17;
 }
