--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
@@ -78,7 +78,7 @@
 .c-btn {
   width: 100%;
   height: auto;
-  margin:  auto;
+  margin:  5px;
   display: flex;
   color: white;
   text-align: center;
