--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -1,14 +1,14 @@
 
 <div class="horizontal" style="margin-bottom: 8px">
   <div class="toolbarTitle"> <b>Today, </b> {{  currentDate }}</div>
-  <div class="imgHolder" *ngIf="!temperature">
+  <div class="imgHolder" *ngIf="!todayWeather">
     <mat-icon class="vertical-align-middle primary-blue" *ngIf="loading">hourglass_empty</mat-icon>
     <div  *ngIf="!loading" (click)="showError(errorMessage)">
       <mat-icon class="vertical-align-middle alert-color">error</mat-icon>
     </div>
   </div>
-  <div class="imgHolder" *ngIf="temperature">
-    <div class="horizontal" >
+  <div class="imgHolder" *ngIf="todayWeather">
+    <div class="horizontal" *ngIf="todayWeather.maxTemperature">
       <div class="temp">
         <span class="vertical-align-middle">{{todayWeather.maxTemperature}}&deg;C</span>
       </div>
