fix the null temperature after 3pm local time

--- a/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
+++ b/liquid-prep-app/src/app/components/my-crops/my-crops.component.html
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="imgHolder" *ngIf="todayWeather">
-    <div class="horizontal" *ngIf="todayWeather.maxTemperature">
+    <div class="horizontal" >
       <div class="temp">
         <span class="vertical-align-middle">{{todayWeather.maxTemperature}}&deg;C</span>
       </div>
