--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -53,3 +53,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: #2F4FFE;
   color: white;
 }
+
+.color-low{
+  color: #db1d22;
+}
+
+.color-medium{
+  color: #e3963a;
+}
+
+.color-high{
+  color: #3f6a17;
+}
