update the advice text color

--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -55,13 +55,13 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .color-low{
-  color: #db1d22;
+  color: #D91E28;
 }
 
 .color-medium{
-  color: #e3963a;
+  color: #D9781E;
 }
 
 .color-high{
-  color: #3f6a17;
+  color: #2C5900;
 }
