removed rainfall icon

--- a/liquid-prep-app/src/app/components/advice/advice.component.html
+++ b/liquid-prep-app/src/app/components/advice/advice.component.html
@@ -45,17 +45,14 @@
     <div class="vertical">
       <div class="imgHolder">
         <img class="vertical-align-middle" src="{{weatherIcon}}" width="25" height="25">
-        <span class="vertical-align-middle temp"> {{temperature}}&deg;C</span>
+        <span class="vertical-align-middle txt-font"> {{temperature}}&deg;C</span>
       </div>
       <Label class="description" textWrap="true">{{"TEMPERATURE"}}</Label>
     </div>
   </mat-grid-tile>
   <mat-grid-tile>
     <div class="vertical">
-      <div class="imgHolder">
-        <img class="vertical-align-middle" src="{{rainfallIcon}}" width="25" height="25">
-        <span class="vertical-align-middle temp"> {{rainfallPercentage}}%</span>
-      </div>
+      <span class="vertical-align-middle txt-font"> {{rainfallPercentage}}%</span>
       <Label class="description" textWrap="true">{{"RAINFALL"}}</Label>
     </div>
   </mat-grid-tile>
